--- a/about/about.html
+++ b/about/about.html
@@ -76,9 +76,9 @@
         <h1>fathitahliil</h1>
         <h2>fathitahliil@gmail.com</h2>
         <div class="icons">
-            <img src="github2.png" class="github">
-            <img src="instagram.jpg" class="instag">
-            <img src="facebook png.jpg" class="facebook">
+            <img src="/images/github2.png" class="github">
+            <img src="/images/instagram.jpg" class="instag">
+            <img src="/images/facebook png.jpg" class="facebook">
         </div>
     </div>
 
@@ -92,7 +92,7 @@
             <h3>Blogs</h3>
         </div>
         <div class="copyright">
-            <img src="copyright png.jpg" class="copy">
+            <img src="/images/copyright png.jpg" class="copy">
             <h2>Fathi 2024</h2>
         </div>
     </div>
